# submit-aml

./: .gitignore  CONTRIBUTING.md  README.md  mise.toml  prek.toml  pyproject.toml  tox.ini  zensical.toml
.github/workflows/: code_quality.yml  docs.yml  tests.yml
docs/: cli-reference.md  configuration.md  examples.md  index.md  python-api.md
docs/stylesheets/: extra.css
src/submit_aml/: Dockerfile  __init__.py  __main__.py  aml.py  command.py  config.py  data.py  defaults.py  environment.py  logger.py  paths.py  progress.py
tests/: conftest.py  test_aml.py  test_cli.py  test_command.py  test_config.py  test_data.py  test_environment.py
